# gh-clean

./: .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
docs/: TMP_codex-optimizations.md  TMP_codex-prompt.md  design.md  test-plan.md
gh_clean/: __init__.py  cli.py  config.py  delete.py  github.py  report.py
tests/: test_delete.py  test_report.py
